vlib/v/checker/tests/map_delete.vv
fn main() {
	mut m := {
		'1': 1
	}
	m.delete(1)
	m.delete(1, 2)
	m2 := {
		'1': 1
	}
	m2.delete('1')
}